fix: swagger UI button alignment  (#2861)
* spring boot, jackson update


* fix run configuration


* align buttons


---------

--- a/api-catalog-ui/frontend/src/components/Swagger/Swagger.css
+++ b/api-catalog-ui/frontend/src/components/Swagger/Swagger.css
@@ -1744,3 +1744,11 @@ body {
 div.info > hgroup.main > a {
     display: none;
 }
+
+button.opblock-summary-control {
+    display: contents;
+}
+
+svg.svg-assets {
+    display: none;
+}
